...
                        android:layout_marginBottom="16dp"
                        android:text="Event Information"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvEventName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="Event Name"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="View Event Comments"
                        app:cornerRadius="8dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnRunLottery"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/yellow_600"
                        android:text="Run Lottery"
                        app:cornerRadius="8dp"
                        app:icon="@drawable/ic_trophy" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDrawReplacement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Draw Replacement Applicant"
                        app:icon="@drawable/ic_refresh" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnInviteUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Cancel an Entrant"
                        app:icon="@drawable/ic_close" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAssignCoOrganizer"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Assign Co-organizer"
                        app:cornerRadius="8dp"
...
